<resources>
    <string name="app_name">Bakery Application</string>
    <string name="login">Enter your login information</string>
    <string name="enter_a_username">Enter Username</string>
    <string name="enter_a_pass">Enter Password</string>
    <string name="enter_log">Login</string>
    <string name="Alt_log">If you don\'t have an account: </string>
    <string name="create_log">Create account</string>
    <string name="user_greet">Welcome, </string>
    <string name="admin_page">Admin Settings</string>
    <string name="view_customer_order">View Order history</string>
    <string name="view_customer_info">View User Information</string>
    <string name="logout">Logout</string>
    <string name="food_page">Food Menu</string>
    <string name="drink_page">Drink Menu</string>
    <string name="bread_page">Breads Menu</string>
    <string name="cake_page">Cakes Menu</string>
    <string name="pastries_page">Pastries Menu</string>
    <string name="coffee_page">Coffee Menu</string>
    <string name="tea_page">Tea Menu</string>
    <string name="juice_page">Juice Menu</string>
    <string name="back_to_login">Back to Login</string>
    <string name="edit_menu_items">Edit Menu Items</string>
    <string name="enter">Enter</string>
    <string name="welcome_to_the_bakery_app">Welcome to the Bakery App!</string>
    <string name="enter_a_name_password"><![CDATA[Enter a name & password]]></string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="go_back">Go back</string>
    <string name="order_history">Order History</string>
    <string name="user_information">User Information</string>
    <string name="food_menu">Food Menu</string>
    <string name="drinks_menu">Drinks Menu</string>
    <string name="edit_drinks_menu">Edit Drinks Menu</string>
    <string name="edit_food_menu">Edit Food Menu</string>
    <string name="view_cart">View Cart</string>
    <string name="checkout">Checkout</string>
    <string name="your_cart_items">Your cart items</string>
    <string name="choice_food">Choose a food menu.</string>
    <string name="choice_drink">Choose a drink menu.</string>
    <string name="address">Enter a delivery address:</string>
    <string name="payment">Enter a payment method:</string>
    <string name="order">order</string>
    <string name="gTCheckout">Proceed to checkout</string>
    <string name="breads">Breads</string>
    <string name="cakes">Cakes</string>
    <string name="coffees">Coffees</string>
    <string name="teas">Teas</string>
    <string name="pastries">Pastries</string>
    <string name="almond_bear_claw">Almond Bear Claw</string>
    <string name="swedish_butterkaka">Swedish Butterkaka</string>
    <string name="cannoli">Cannoli</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="chai_latte">Chai Latte</string>
    <string name="thai_milk_tea">Thai Milk Tea</string>
    <string name="jasmine">Jasmine</string>
    <string name="drip_coffee">Drip Coffee</string>
    <string name="latte">Latte</string>
    <string name="dutch_crunch">Dutch Crunch</string>
    <string name="sourdough">Sourdough</string>
    <string name="ciabatta">Ciabatta</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="chocolate_cake">Chocolate Cake</string>

</resources>