<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userActivities.UserActivity">

    <TextView
        android:id="@+id/UserGreetingTextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/user_greet"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FoodMenuButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        android:text="@string/food_page"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserGreetingTextView" />

    <Button
        android:id="@+id/DrinksMenuButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/drink_page"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodMenuButton" />

    <Button
        android:id="@+id/ViewCartButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:text="@string/view_cart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrinksMenuButton" />

    <Button
        android:id="@+id/CheckoutButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewCartButton" />


    <Button
        android:id="@+id/logoutUser"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adminSettings"
        android:layout_width="145dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:text="@string/admin_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>