<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/DrinksMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teas"
        android:textSize="24sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/go_back"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ChaiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/chai_latte"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ChaiSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrinksMenuTextView" />

    <SeekBar
        android:id="@+id/ChaiSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrinksMenuTextView" />

    <TextView
        android:id="@+id/ThaiTeaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/thai_milk_tea"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ThaiTeaSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChaiTextView" />

    <SeekBar
        android:id="@+id/ThaiTeaSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChaiSeekBar" />

    <TextView
        android:id="@+id/JasmineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/jasmine"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/JasmineTeaSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ThaiTeaTextView" />

    <SeekBar
        android:id="@+id/JasmineTeaSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ThaiTeaSeekBar" />

    <Button
        android:id="@+id/TeaCheckoutButton"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/add_to_cart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/goBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>