<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userActivities.FoodMenuActivity">

    <TextView
        android:id="@+id/FoodMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breads"
        android:textSize="24sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CiabattaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciabatta"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/CiabattaSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodMenuTextView" />

    <SeekBar
        android:id="@+id/CiabattaSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodMenuTextView" />

    <TextView
        android:id="@+id/SourdoughTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sourdough"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/SourdoughSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CiabattaTextView" />

    <SeekBar
        android:id="@+id/SourdoughSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CiabattaSeekBar" />

    <TextView
        android:id="@+id/DutchCrunchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dutch_crunch"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/DutchCrunchSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SourdoughTextView" />

    <SeekBar
        android:id="@+id/DutchCrunchSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SourdoughSeekBar" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/go_back"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>