<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userActivities.DrinksMenuActivity">

    <TextView
        android:id="@+id/CoffeeMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffees"
        android:textSize="24sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DripCoffeeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/drip_coffee"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/DripCoffeeSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoffeeMenuTextView" />

    <SeekBar
        android:id="@+id/DripCoffeeSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoffeeMenuTextView" />

    <TextView
        android:id="@+id/LatteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/latte"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/LatteSeekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DripCoffeeTextView" />

    <SeekBar
        android:id="@+id/LatteSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DripCoffeeSeekBar" />

    <TextView
        android:id="@+id/CappuccinoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/cappuccino"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/CappuccinoSeekBar"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LatteTextView" />

    <SeekBar
        android:id="@+id/CappuccinoSeekBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LatteSeekBar" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/go_back"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>